# titopati-protocol

./: Anchor.toml  COLOSSEUM_SUBMISSION.md  README.md  index.html
programs/titopati-registry/: Cargo.toml
programs/titopati-registry/src/: lib.rs
scripts/: demo.ts  deploy.sh  package.json  register-agents.ts
sdk/: README.md  package.json
sdk/src/: index.ts
tests/: titopati.ts
