[package]
name = "titopati-registry"
version = "0.1.0"
description = "Agent Identity Registry - Built by TitoPati"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "titopati_registry"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
